Fixed responsivness in home, show trackermaps for shifters, cleanup

--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -2,3 +2,11 @@
     width: 100% !important;
     height: 185px !important;
 }
+
+.card-deck.row {
+    display: flex;
+}
+
+.card {
+    cursor: pointer;
+}
